ligolang/src/test/contracts/negative/parametric_types3.religo
type foo('a,'b,'c) = ('a , 'b , 'c);
type bar = foo(int);